--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -1,5 +1,5 @@
 .element__delete {
-    all: unset;
+  all: unset;
   margin: 0;
   padding: 0;
   width: 18px;
@@ -9,11 +9,11 @@
   background-size: cover;
   cursor: pointer;
   transition: opacity 0.3s ease;
-  position:absolute;
-    top: 20px;
-    right: 20px;
-}
+  position: absolute;
+  top: 20px;
+  right: 20px;
+};
 
 .element__delete:hover {
   opacity: .6;
-}
+};
