fix: css delete

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
 @import url(./blocks/elements/elements.css);
 @import url(./blocks/element/element.css);
 @import url(./blocks/element/__delete/element__delete.css);
+@import url(./blocks/element/__delete/_invisible/element__delete_invisible.css);
 @import url(./blocks/element/__image/element__image.css);
 @import url(./blocks/element/__caption/element__caption.css);
 @import url(./blocks/element/__text/element__text.css);
